<resources>
    <string name="app_name">toCare</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ja_possui_cadastro">Already have a registration?</string>
    <string name="paciente">Patient</string>
    <string name="medico">Doctor</string>
    <string name="caso_nao_possua">In case you don\'t have</string>
    <string name="cadastrese">Register</string>
    <string name="voce_eh_um_medico_ou_um_paciente">Are you a doctor or a patient?</string>
    <string name="nome">Name</string>
    <string name="sobrenome">Last Name</string>
    <string name="pais_de_origem">Country of Origin</string>
    <string name="documento_medico">Doctor Document</string>
    <string name="email">E-mail</string>
    <string name="comfirme_email">Confirm E-mail</string>
    <string name="genero">Genre</string>
    <string name="senha">Password</string>
    <string name="confirme_senha">Confirm Password</string>
    <string name="data_nascimento">Birth Date</string>
    <string name="numero_documento">Document Number(It\'s not mandatory.)</string>
    <string name="cpf">Document Number</string>
    <string name="voltar">Back</string>
    <string name="login">Login</string>
    <string name="autenticando">Authenticating</string>
    <string name="ficha_medica">Medical Record</string>
    <string name="ficha_de_consulta">Medical Consultation Sheet</string>
    <string name="medicos">Doctors</string>
    <string name="editar_conta">Edit Acount</string>
    <string name="plano_de_saude">Health Insurance</string>
    <string name="deficiencia_fisica">Physical Disability</string>
    <string name="deficiencia_fisica_descricao">Physical Disability Description</string>
    <string name="descricao_geral">General Description</string>
    <string name="tipo_sanguineo">Blood Type</string>
    <string name="altura">Height(cm)</string>
    <string name="peso">Weight(kg)</string>
    <string name="indice_de_massa_corporal">Body Mass Index</string>
    <string name="sim">Yes</string>
    <string name="no">No</string>
    <string name="salvar">Save</string>
    <string name="editar">Edit</string>
    <string name="anamnese">Anamnesis</string>
    <string name="exame_fisico">Physical Exam</string>
    <string name="hipotese_diagnostica">Diagnostic Hypothesis</string>
    <string name="plano_terapeutico">Therapeutic Plan</string>
    <string name="editar_ficha_medica">Edit Medical Record.</string>
    <string name="editar_ficha_consulta">Edit Medical Consultation Sheet</string>
    <string name="meus_medicos">My Doctors</string>
    <string name="adicionar_medico">Add Doctor</string>
    <string name="deseja_adicionar">teste</string>
    <string name="acesso_retirado">Access Withdrawn.</string>
    <string name="deseja_remover">Do you want to remove from your Doctors? (By doing this the doctor in question will no longer have access to your medical record and you will not be able to edit your medical record.)</string>
    <string name="meus_pacientes">My Patients</string>
    <string name="detalhes_paciente">Details Patients</string>
    <string name="pacientes">Patients</string>
    <string name="sair">Logout</string>
    <string name="carregando">Loading...</string>
    <string name="cadastro_paciente">Patient Registration</string>
    <string name="cadastro_medico">Doctor Registration</string>
    <string name="esqueceu_senha">Forgot your password? Click here</string>


</resources>
