<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundnew"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/ja_possui_cadastro"
                    android:textColor="@color/textcolornew"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btPaciente"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_alignBaseline="@+id/btSignUp"
                    android:layout_alignBottom="@+id/btSignUp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_dark"
                    android:onClick="OnClicklogin"
                    android:text="@string/paciente"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btMedico"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_alignBaseline="@+id/btSignUp"
                    android:layout_alignBottom="@+id/btSignUp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_dark"
                    android:onClick="OnClicklogin"
                    android:text="@string/medico"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/caso_nao_possua"
                    android:textColor="@color/textcolornew"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btCadastro"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_alignBaseline="@+id/btSignUp"
                android:layout_alignBottom="@+id/btSignUp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_dark"
                android:onClick="OnClicklogin"
                android:text="@string/cadastrese"
                android:textColor="@color/white" />

            <!--Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Cadastre-se"
                android:id="@+id/btSignUp"
                android:onClick="OnClicklogin"
                android:background="@color/botoes"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp" /-->

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="20dp"
                android:text="toCare © 2018"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textcolornew"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>