<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundnew"
    tools:context="br.com.noctua.tocare.DetalhesPaciente"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:elevation="4dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ToolBarStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/tb_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Fotos">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/ivFotoPerfil"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    fresco:placeholderImage="@drawable/loadingimage"
                    fresco:failureImage ="@drawable/imagenotfound" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/Fotos"
                android:gravity="center"
                android:id="@+id/Nome">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/TextSelected"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/carregando"
                    android:textAlignment="center"
                    android:textColor="@color/textcolornew"
                    android:textSize="27sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/TextSelected"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Nome"
                android:id="@+id/Opcoes">

                <LinearLayout
                    android:id="@+id/layoutFichaMedica"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    android:onClick="onClickDetalhesPaciente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ic_FichaMedica"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:onClick="onClickDetalhesPaciente"
                        android:src="@drawable/datasheet" />

                    <TextView
                        android:id="@+id/tvFichaMedica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center"
                        android:onClick="onClickDetalhesPaciente"
                        android:text="@string/ficha_medica"
                        android:textAlignment="center"
                        android:textColor="@color/TextSelected"
                        android:textSize="17dp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutFichaConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    android:onClick="onClickDetalhesPaciente"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ic_FichaConsulta"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:onClick="onClickDetalhesPaciente"
                        android:src="@drawable/ic_fichaconsulta" />

                    <TextView
                        android:id="@+id/tvFichaConsulta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center"
                        android:onClick="onClickDetalhesPaciente"
                        android:text="@string/ficha_de_consulta"
                        android:textAlignment="center"
                        android:textColor="@color/TextSelected"
                        android:textSize="17dp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/vw1"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@+id/Opcoes"
                android:layout_marginTop="10dp"
                android:background="@color/TextSelected" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
